# game-bevy-rust

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
licences/: bevy_spectator.txt
src/: atmosphere.rs  camera.rs  constants.rs  lib.rs  main.rs  player.rs  shared.rs  show_fps.rs  terrain.rs
